# business-mcp-servers

./: .gitignore  README.md
.github/: FUNDING.yml
mcp-servers/: README.md
mcp-servers/career-manager/: README.md  pyproject.toml  system-prompt.md
mcp-servers/career-manager/src/career_manager/: __init__.py  documents.py  server.py  storage.py  webui.py
mcp-servers/career-manager/src/career_manager/resources/: __init__.py
mcp-servers/career-manager/src/career_manager/tools/: __init__.py  applications.py  cover_letter.py  goals.py  interview.py  network.py  profile.py  resume.py  skills.py
mcp-servers/code-reviewer/: README.md  server.py
mcp-servers/contact-book/: README.md  server.py
mcp-servers/crm/: README.md  server.py
mcp-servers/design-audit/: README.md  server.py
mcp-servers/document-wiki/: README.md  server.py
mcp-servers/expense-tracker/: README.md  server.py
mcp-servers/file-organizer/: README.md  server.py
mcp-servers/habit-tracker/: README.md  server.py
mcp-servers/inventory-manager/: README.md  server.py
mcp-servers/journal/: README.md  server.py
mcp-servers/kanban-mcp/: README.md  cli.py  index.html  kanban_data.json  kanban_server.py  models.py  preview.html  pyproject.toml  storage.py
mcp-servers/meeting-notes/: README.md  server.py
mcp-servers/notes-ideas/: README.md  server.py
mcp-servers/password-vault/: README.md  server.py
mcp-servers/project-manager/: README.md  server.py
mcp-servers/skills-server/: README.md  server.py
mcp-servers/task-automator/: README.md  server.py
mcp-servers/time-tracker/: README.md  (+1 more)
(+9 files in other folders)
