[project]
name = "career-manager"
version = "0.1.0"
description = "All-in-one career management MCP server with tools for resume, interviews, job tracking, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
docs = [
    "python-docx>=0.8.11",
    "reportlab>=4.0.0",
]
webui = [
    "jinja2>=3.0.0",
]

[project.scripts]
career-manager = "career_manager.server:main"
career-manager-webui = "career_manager.webui:run_webui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/career_manager"]